# .claude

./: .gitignore  CLAUDE.md  README.md  settings.json  statusline.js
agents/: android-ux-reviewer.md  debug-specialist.md  ios-ux-reviewer.md  mobile-design-specialist.md
commands/: commit-push.md  create-branch-pr.md  create-pr.md  fix-githubaction.md  fix-githubactions.md  fix-issue.md  sync-main.md  sync-staging.md  sync-stg.md  sync.md  update-pr.md
scripts/: deny-check.sh  deny-check_test.sh  detect-ide.sh  detect-terminal.sh  permission-notification  permission-notification.sh  task-complete-notification  task-complete-notification.sh
scripts-rust/: Cargo.toml  README.md
scripts-rust/src/: lib.rs
scripts-rust/tests/: extract_questions_test.rs  truncate_content_test.rs
scripts/backup/: detect-terminal.sh  task-complete-notification.sh
skills/: mobile-design.md
