[package]
name = "claude-hooks"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ureq = { version = "2", features = ["json"] }

[[bin]]
name = "permission-notification"
path = "src/bin/permission-notification.rs"

[[bin]]
name = "task-complete-notification"
path = "src/bin/task-complete-notification.rs"

[[bin]]
name = "format-tool-display"
path = "src/bin/format-tool-display.rs"

[[bin]]
name = "user-prompt-slack"
path = "src/bin/user-prompt-slack.rs"
